[gd_scene load_steps=7 format=3 uid="uid://dv8qfo04vs7ds"]

[ext_resource type="Texture2D" uid="uid://dqcy7s6ohdqad" path="res://Sprites/goose-Sheet.png" id="1_28flt"]
[ext_resource type="Texture2D" uid="uid://bnlyeivt0qw2a" path="res://Sprites/arena_bg.png" id="1_48xlc"]
[ext_resource type="Script" uid="uid://ln4wh4peowtp" path="res://Scenes/main_menu.gd" id="1_ce3w2"]
[ext_resource type="Shader" uid="uid://wyxymtgvihrk" path="res://Player/change_color.gdshader" id="2_1ehe0"]
[ext_resource type="PackedScene" uid="uid://ejpmglpsrli" path="res://Scenes/guide.tscn" id="2_n45e2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ce3w2"]
resource_local_to_scene = true
shader = ExtResource("2_1ehe0")
shader_parameter/base = Color(0.878431, 0.878431, 0.878431, 1)
shader_parameter/secondary = Color(0.654902, 0.380392, 0.101961, 1)
shader_parameter/og_base = Color(0.956863, 0.494118, 0.105882, 1)
shader_parameter/og_secondary = Color(0.662745, 0.231373, 0.231373, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ce3w2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 44

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.5
offset_right = 140.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Start"

[node name="Guide" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Guide"

[node name="GuideContainer" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Guide" parent="CanvasLayer/GuideContainer" instance=ExtResource("2_n45e2")]
layout_mode = 1

[node name="Close" type="Button" parent="CanvasLayer/GuideContainer"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 41
text = "Close"

[node name="Parallax2D" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.4, 0.4)

[node name="Sprite2D3" type="Sprite2D" parent="Parallax2D"]
position = Vector2(-244, -71)
scale = Vector2(4.615, 4.615)
texture = ExtResource("1_48xlc")
centered = false

[node name="Parallax2D2" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.7, 0.7)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D2"]
material = SubResource("ShaderMaterial_ce3w2")
position = Vector2(813, 51.9999)
rotation = -0.327446
scale = Vector2(46.7321, 46.7321)
texture = ExtResource("1_28flt")
hframes = 31

[node name="Sprite2D2" type="Sprite2D" parent="Parallax2D2"]
position = Vector2(284, 68)
rotation = -2.81347
scale = Vector2(46.732, -46.732)
texture = ExtResource("1_28flt")
hframes = 31

[node name="Cam" type="Camera2D" parent="."]
unique_name_in_owner = true
anchor_mode = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Center" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 345)

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Guide" to="." method="_on_guide_pressed"]
[connection signal="pressed" from="CanvasLayer/GuideContainer/Close" to="." method="_on_close_pressed"]
